Rewrite osrs.sh